rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/annotation_keyword.rns
; some comment
; another comment
annotation
.class public HelloWorld
.super java/lang/Object
